--- a/wishes/app.json
+++ b/wishes/app.json
@@ -1,13 +1,49 @@
 {
   "pages":[
-    "pages/logs/logs",
-    "pages/index/index"
-
+    "pages/profit/index",
+    "pages/stock/index",
+    "pages/business/index",
+    "pages/client/index",
+    "pages/login/index"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+  "tabBar":{
+    "color":"#666666",
+    "selectedColor":"#fe6012",
+    "list":[
+      {
+        "pagePath":"pages/client/index",
+        "text":"客户",
+        "iconPath":"./base/img/client.png",
+        "selectedIconPath":"./base/img/client-active.png"
+
+      },
+      {
+        "pagePath":"pages/business/index",
+        "text":"业务",
+        "iconPath":"./base/img/business.png",
+        "selectedIconPath":"./base/img/business-active.png"
+      },
+      {
+        "pagePath":"pages/stock/index",
+        "text":"库存",
+        "iconPath":"./base/img/stock.png",
+        "selectedIconPath":"./base/img/stock-active.png"
+      },
+      {
+        "pagePath":"pages/profit/index",
+        "text":"利润",
+        "iconPath":"./base/img/profit.png",
+        "selectedIconPath":"./base/img/profit-active.png"
+      },
+      {
+        "pagePath":"pages/login/index",
+        "text":"管理中心",
+        "iconPath":"./base/img/administer.png",
+        "selectedIconPath":"./base/img/administer-active.png"
+      }
+    ]
+
+
+
   }
 }
